@@ -12,4 +12,4 @@ ADD ${APPDIR} app.jar
 EXPOSE ${PORT}
 
 
-ENTRYPOINT ["java","$JAVA_OPTS","-Djava.security.egd=file:/dev/./urandom","-jar","-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}","app.jar"]
+ENTRYPOINT ["java","-Xmx1024m -Xms1024m -XX:NewRatio=4 -XX:MaxPermSize=1024m","-Djava.security.egd=file:/dev/./urandom","-jar","-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}","app.jar"]
